--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   localstorage: ^4.0.0+1
   flutter_svg: ^0.22.0
+  flutter_staggered_grid_view: ^0.7.0
 
 
 
