--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,15 +38,25 @@ dependencies:
   get: ^4.6.6
   google_fonts: ^6.1.0
   flutter_screenutil: ^5.9.0
-  localstorage: ^4.0.0+1
   flutter_svg: ^0.22.0
   flutter_staggered_grid_view: ^0.7.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  localstorage: ^4.0.1+4
+
+
+
+
+
+
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.8
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
